--- a/css/style.css
+++ b/css/style.css
@@ -43,55 +43,8 @@ ul {
 }
 
 .articles {
-  display: grid;
-  grid-template-areas: "a b c" "d e f";
-}
-
-.a {
-  grid-area: a;
-}
-
-.b {
-  grid-area: b;
-}
-
-.c {
-  grid-area: c;
-}
-
-.d {
-  grid-area: d;
-}
-
-.e {
-  grid-area: e;
-}
-
-.f {
-  grid-area: f;
-}
-
-.articles2 {
-  display: grid;
-  grid-template-areas: "a a b" "a a c";
-}
-
-.un {
-  grid-area: a;
-  background-color: #8594c6;
-}
-
-.deux {
-  grid-area: b;
-  background-color: #85a7d4;
-}
-
-.trois {
-  grid-area: c;
-  background-color: #5a75b4;
-}
-
-.article {
+  display: flex;
+  justify-content: flex-start;
   min-width: 300px;
   padding: 2rem;
   margin: 1.5rem;
